--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="EMR/EMR/src"/>
-	<classpathentry kind="lib" path="EMR/EMR/extra_jar/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="EMR/EMR/extra_jar/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="EMR/EMR/extra_jar/hsqldb-2.3.1.jar"/>
-	<classpathentry kind="lib" path="EMR/EMR/extra_jar/jackcess-2.1.11.jar"/>
-	<classpathentry kind="lib" path="EMR/EMR/extra_jar/ucanaccess-4.0.4.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/heeme/git/EMR/lib/mysql-connector-java-8.0.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
